Colocando las meta

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <meta name="description" content="Toda la informacion de Santiago del Estero, Argentina y el Mundo actualizada.">
+  <meta name="keywords"
+    content="Diario, Santiago, Noticias, Actualidad, Informacion, Politica, Locales, Espectaculos, Interior del Pais">
+  <meta name="author" content="Felipe Paz">
+  <meta property="og:title" content="Diario Santiago 24x7 | Objetivos, pero no imparciales">
+  <meta property="og:description" content="Toda la informacion de Santiago del Estero, Argentina y el Mundo actualizada">
+  <meta property="og:image" content="https://img2.freepng.es/20191015/lvi/transparent-line-text-font-logo-symbol-lineclip-artcoloring-bookparallelgraphics-3565da9d8ae6c2bc6.4968880915714121424431.jpg">
   <title>Diario Santiago 24x7 | Objetivos, pero no imparciales</title>
   <!-- link AOS
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
