--- a/pages/locales.html
+++ b/pages/locales.html
@@ -42,10 +42,6 @@
             <li class="nav-item me-4 secciones">
               <a class="nav-link" href="../pages/actualidad.html">Actualidad</a>
             </li>
-            <li class="nav-item me-4 d-flex secciones ">
-              <a class="nav-link" href="../pages/suscribete.html">Suscribete!</a>
-              <img class="notificacion" src="../img/notificacion.png" alt="notificacion">
-            </li>
           </ul>
 
         </div>
@@ -68,9 +64,10 @@
       regionales y una destacada cartelera artística que incluye a La Banda del Rey Santiagueño Pastor Luna, Ceferino
       Torres, “Pochi” Chávez, Los Sachitas, Miguel Figueroa y su Conjunto Amanecer Campero, Los Santiagueños del Río,
       Marcelo Veliz, Las Sachas Guitarras Atamisqueñas, Alejandro Veliz, Los Legüeros, Academia Municipal Renacer de Mi
-      Tierra, Franco Arroyo, Huguito Flores y la presentación especial de Daniel Agostini.</p>
-    <iframe class="mt-3 mb-3" width="560" height="315" src="https://www.youtube.com/embed/0BDJzbLBb_8" title="YouTube video player"
-      frameborder="0"
+      Tierra, Franco Arroyo, Huguito Flores y la presentación especial de Daniel Agostini.
+    </p>
+    <iframe class="mt-3 mb-3" width="560" height="315" src="https://www.youtube.com/embed/0BDJzbLBb_8"
+      title="YouTube video player" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       allowfullscreen></iframe>
   </section>
