--- a/pages/politica.html
+++ b/pages/politica.html
@@ -41,10 +41,6 @@
             <li class="nav-item me-4 secciones">
               <a class="nav-link" href="../pages/actualidad.html">Actualidad</a>
             </li>
-            <li class="nav-item me-4 d-flex secciones ">
-              <a class="nav-link" href="../pages/suscribete.html">Suscribete!</a>
-              <img class="notificacion" src="../img/notificacion.png" alt="notificacion">
-            </li>
           </ul>
 
         </div>
@@ -55,7 +51,8 @@
 
 
   <section>
-    <h1 class="display-1 text-opacity-75 fw-bolder encabezado">Dirigentes del oficialismo responsabilizaron a la oposición por la
+    <h1 class="display-1 text-opacity-75 fw-bolder encabezado">Dirigentes del oficialismo responsabilizaron a la
+      oposición por la
       corrida cambiaria</h1>
     <p class="fs-2 mt-3">
       Además del presidente Alberto Fernández, otros integrantes del Frente de Todos manifestaron su apoyo al ministro
@@ -63,7 +60,7 @@
       en la divisa extranjera de los últimos días.
     </p>
     <img src="../img/massa-lg.jpg" alt="Sergio Massa" class=" container mt-3 mb-3">
-    <p class= "mt-3 mb-3">
+    <p class="mt-3 mb-3">
       Este martes, varios dirigentes del oficialismo dejaron de lado las internas electorales y concentraron sus
       esfuerzos en respaldar la gestión de Sergio Massa frente al Ministerio de Economía y en denunciar públicamente a
       la oposición por la corrida cambiaria que atraviesa el país. <br>
