Intentando mejorar colores

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <div class="header_logo container-fluid">
       <a href="index.html"><img src="img/logo1.png" alt="logo"></a>
     </div>
-    <nav class="navbar navbar-expand-sm bg-body-secondary">
+   <div class="nav-bar-mio">
+    <nav class="navbar navbar-expand-sm ">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,6 +64,8 @@
         </div>
       </div>
     </nav>
+
+   </div>
     <hr>
   </header>
   <div class="titulo.minuto">
