Corrigiendo nav-bar

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
   <header>
     <div class="header_logo container-fluid">
       <a href="index.html"><img src="img/logo1.png" alt="logo"></a>
+      <hr>
     </div>
    <div class="nav-bar-mio">
-    <nav class="navbar navbar-expand-sm ">
+    <nav class="navbar navbar-expand-sm bg-body-secondary">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,18 +44,18 @@
         <div class="collapse navbar-collapse container-fluid" id="navbarNav">
           <ul class="navbar-nav d-flex align-items-center secciones-navbar">
             <li class="nav-item me-4 secciones">
-              <a class="nav-link active" aria-current="page" href="pages/locales.html">Locales</a>
+              <a class="nav-link secciones" href="pages/locales.html">Locales</a>
             </li>
-            <li class="nav-item secciones">
+            <li class="nav-item me-4 secciones">
               <a class="nav-link" href="pages/nacionales.html">Nacionales</a>
             </li>
-            <li class="nav-item secciones">
+            <li class="nav-item me-4 secciones">
               <a class="nav-link" href="pages/politica.html">Politica</a>
             </li>
-            <li class="nav-item secciones">
+            <li class="nav-item me-4 secciones">
               <a class="nav-link" href="pages/actualidad.html">Actualidad</a>
             </li>
-            <li class="nav-item d-flex secciones ">
+            <li class="nav-item d-flex me-4 secciones ">
               <a class="nav-link animate__animated animate__flash" href="#formulario">Suscribete!</a>
               <img class="notificacion" src="img/notificacion.png" alt="notificacion">
 
