--- a/pages/actualidad.html
+++ b/pages/actualidad.html
@@ -21,32 +21,35 @@
   <header>
     <div class="header_logo container-fluid">
       <a href="../index.html"><img src="../img/logo1.png" alt="logo"></a>
+      <hr>
     </div>
-    <nav class="navbar navbar-expand-sm bg-body-secondary">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse container-fluid" id="navbarNav">
-          <ul class="navbar-nav d-flex align-items-center ">
-            <li class="nav-item me-4 secciones">
-              <a class="nav-link active" aria-current="page" href="../pages/locales.html">Locales</a>
-            </li>
-            <li class="nav-item me-4 secciones">
-              <a class="nav-link" href="../pages/nacionales.html">Nacionales</a>
-            </li>
-            <li class="nav-item me-4 secciones">
-              <a class="nav-link" href="../pages/politica.html">Politica</a>
-            </li>
-            <li class="nav-item me-4 secciones">
-              <a class="nav-link" href="../pages/actualidad.html">Actualidad</a>
-            </li>
-          </ul>
-
+    <div class="nav-bar-mio">
+      <nav class="navbar navbar-expand-sm  bg-body-secondary">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse container-fluid" id="navbarNav">
+            <ul class="navbar-nav d-flex align-items-center secciones-navbar ">
+              <li class="nav-item me-4 secciones">
+                <a class="nav-link active" href="../pages/locales.html">Locales</a>
+              </li>
+              <li class="nav-item me-4 secciones">
+                <a class="nav-link" href="../pages/nacionales.html">Nacionales</a>
+              </li>
+              <li class="nav-item me-4 secciones">
+                <a class="nav-link" href="../pages/politica.html">Politica</a>
+              </li>
+              <li class="nav-item me-4 secciones">
+                <a class="nav-link" href="../pages/actualidad.html">Actualidad</a>
+              </li>
+            </ul>
+  
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
     <hr>
   </header>
   <section>
