--- a/pages/nacionales.html
+++ b/pages/nacionales.html
@@ -21,6 +21,7 @@
   <header>
     <div class="header_logo container-fluid">
       <a href="../index.html"><img src="../img/logo1.png" alt="logo"></a>
+      <hr>
     </div>
     <nav class="navbar navbar-expand-sm bg-body-secondary">
       <div class="container-fluid">
@@ -29,7 +30,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse container-fluid" id="navbarNav">
-          <ul class="navbar-nav d-flex align-items-center ">
+          <ul class="navbar-nav d-flex align-items-center secciones-navbar">
             <li class="nav-item me-4 secciones">
               <a class="nav-link active" aria-current="page" href="../pages/locales.html">Locales</a>
             </li>
